generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__tests__cjs_export.snap
---
source: generator/javascript/src/transform/mod.rs
expression: ast
---
JavaScript(
    [
        Variable(
            "$knot",
            PropertyAccess(
                FunctionCall(
                    Identifier(
                        "require",
                    ),
                    [
                        String(
                            "@knot/runtime",
                        ),
                    ],
                ),
                "$knot",
            ),
        ),
        Variable(
            "bar",
            Null,
        ),
        Assignment(
            PropertyAccess(
                Identifier(
                    "exports",
                ),
                "bar",
            ),
            Identifier(
                "bar",
            ),
        ),
    ],
)
