generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__tests__esm_export.snap
---
source: generator/javascript/src/transform/mod.rs
expression: ast
---
JavaScript(
    [
        Import(
            "@knot/runtime",
            [
                (
                    "$knot",
                    None,
                ),
            ],
        ),
        Variable(
            "bar",
            Null,
        ),
        Export(
            "bar",
        ),
    ],
)
