generator/javascript/src/transform/snapshots/knot_generator_javascript__transform__tests__export_public_values.snap
---
source: generator/javascript/src/transform/mod.rs
expression: ast
---
JavaScript(
    [
        Import(
            "@knot/runtime",
            [
                (
                    "$knot",
                    None,
                ),
            ],
        ),
        Variable(
            "bar",
            Null,
        ),
        Variable(
            "fizz",
            Null,
        ),
        Export(
            "fizz",
        ),
    ],
)
